# goodman_focus

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
docs/: Makefile  conf.py  gettingdata.rst  goodman_focus.rst  index.rst  install.rst  usingit.rst
docs/_build/doctrees/: environment.pickle  goodman_focus.doctree  goodman_focus.tests.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  goodman_focus.html  goodman_focus.tests.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: goodman_focus.tests.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: im_g_SDSS.fits  sp_400m1.fits  sp_400m2.fits
goodman_focus/: __init__.py  goodman_focus.py  version.py
goodman_focus/tests/: test_goodman_focus.py
goodman_focus_finder/: __init__.py  get_focus.py
