[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "goodman_focus"
dynamic = ["version"]
description = "Finds best focus for Goodman HTS based on a series of images obtained with different focus values"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [
    "soar",
    "pipelines",
    "astronomy",
    "images",
    "spectroscopy",
    "focus"
]

authors = [
  {name = "Simón Torres", email = "simon.torres@noirlab.edu"}
]
maintainers = [
  {name = "Simón Torres", email = "simon.torres@noirlab.edu"}
]

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',
  'Operating System :: POSIX :: Other',
  'Operating System :: MacOS :: MacOS X',
  'Topic :: Scientific/Engineering :: Astronomy',
  'Topic :: Scientific/Engineering :: Information Analysis',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

dependencies = [
  "astropy",
  "ccdproc",
  "matplotlib",
  "numpy",
  "packaging",
  "pandas",
  "scipy",
]

[project.urls]
"Homepage" = "https://soardocs.readthedocs.io/projects/goodmanfocus/en/latest/"
"Bug Reports" = "https://github.com/soar-telescope/goodman_focus/issues"
"Source" = "https://github.com/soar-telescope/goodman_focus"

[project.scripts]
goodman-focus = "goodman_focus:run_goodman_focus"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["goodman_focus"]

[tool.setuptools_scm]
version_file = "goodman_focus/version.py"
