[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
project = 'Goodman Focus'
source-dir = docs
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = goodman_focus
description = Finds best focus for Goodman HTS based on a series of images obtained with different focus values
long_description = Standalone app to get the best focus.
author = Simon Torres
author_email = storres@ctio.noao.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = soar-telescope/goodman_focus
install_requires =
    astropy>=3.2.1
    matplotlib>=3.1.0
    numpy>=1.16.4
    pandas>=0.24.2
    scipy>=1.3.0
    ccdproc>=1.3.0.post1
    sphinx>=2.1.2

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 0.1.2
