[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_sphinx]
project = 'Goodman Focus'
source-dir = docs
build-dir = docs/_build

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
package_name = goodman_focus
description = Finds best focus for Goodman HTS based on a series of images obtained with different focus values
long_description = Standalone app to get the best focus.
author = Simon Torres
author_email = storres@ctio.noao.edu
license = BSD-3-Clause
# url =
edit_on_github = False
github_project = soar-telescope/goodman_focus
install_requires =
    astropy
    matplotlib
    numpy
    pandas
    scipy
    ccdproc
    sphinx

# version should be PEP440 compatible (http://www.python.org/dev/peps/pep-0440)
version = 1.1.0.dev1

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    matplotlib
    numpy
    pandas
    scipy
    ccdproc
    sphinx

[options.extras_require]
docs =
    sphinx-astropy
    sphinx_rtd_theme